# resivate

./: .coverage  .env  README.md  alembic.ini  create_tables.py  pyproject.toml  requirements.txt  restaurant_example.py
alembic/: env.py
app/: main.py
app/api/: __init__.py
app/api/endpoints/: category.py  faq.py  image.py  menu_option.py  option.py  plan.py  processing_info.py  solutions_data.py  type.py
app/core/: __init__.py  config.py  deps.py
app/crud/: base.py  processing_info.py  solutions_data.py  type.py
app/database/: base.py  base_class.py  session.py
app/docs/: __init__.py  openapi.yml  openapi_faq.yml  openapi_image.yml  openapi_menu_option.yml  openapi_option.yml  openapi_plan.yml  openapi_processing_info.yml  openapi_solutions_data.yml  openapi_type.yml
app/models/: __init__.py  category.py  faq.py  image.py  menu_option.py  option.py  plan.py  processing_info.py  solutions_data.py  type.py
app/schemas/: __init__.py  category.py  faq.py  image.py  menu_option.py  option.py  plan.py  processing_info.py  solutions_data.py  type.py
app/tests/: __init__.py  test_category.py  test_faq.py  test_image.py  test_menu_option.py  test_option.py  test_plan.py  test_processing_info.py  test_solutions_data.py  test_type.py
