[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "resivate"
version = "0.1.0"
description = "A FastAPI project for resivate"
readme = "README.md"
requires-python = ">=3.13"
authors = [
    {name = "Carlos Tellez", email = "carloss.tellezz@gmail.com"}
]
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-fastapi>=0.0.2",
    "pytest-cov>=4.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["app/tests"]
python_files = "test_*.py"

[tool.coverage.run]
source = ["app"]
omit = ["app/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "pass",
    "if __name__ == .__main__.:"
] 